--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=WIBUU\\QUY;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "JwtOptions": {
