--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=WIBUU\\QUY;Database=Mango_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
+    },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "mango-auth-api",
