--- a/Mango.GatewaySolution/Mango.GatewaySolution.csproj
+++ b/Mango.GatewaySolution/Mango.GatewaySolution.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="IdentityModel" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0-preview.3.23177.8" />
     <PackageReference Include="Ocelot" Version="19.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
