--- a/Mango.Services.CouponAPI/Mango.Services.CouponAPI.csproj
+++ b/Mango.Services.CouponAPI/Mango.Services.CouponAPI.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Stripe.net" Version="41.13.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
