--- a/Mango.Services.EmailAPI/appsettings.json
+++ b/Mango.Services.EmailAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Email;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=WIBUU\\QUY;Database=Mango_Email;Trusted_Connection=True;TrustServerCertificate=True"
+    },
   "ServiceBusConnectionString": "Endpoint=sb://mangoweb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=HjoslS58pPHtAULb0tay/jx4Ys0+MO5/R+ASbCcFTG0=",
   "TopicAndQueueNames": {
     "EmailShoppingCartQueue": "emailshoppingcart",
