--- a/Mango.Services.OrderAPI/Mango.Services.OrderAPI.csproj
+++ b/Mango.Services.OrderAPI/Mango.Services.OrderAPI.csproj
@@ -20,6 +20,7 @@
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Stripe.net" Version="41.13.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
