--- a/Mango.Services.RewardAPI/appsettings.json
+++ b/Mango.Services.RewardAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Reward;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=WIBUU\\QUY;Database=Mango_Reward;Trusted_Connection=True;TrustServerCertificate=True"
+    },
   "TopicAndQueueNames": {
     "OrderCreatedTopic": "OrderCreated",
     "OrderCreated_Rewards_Subscription": "OrderCreatedRewardsUpdate"
