--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Order;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=WIBUU\\QUY;Database=Mango_Order;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
